--- a/src/app/componentes/pokemon/pokemon.component.html
+++ b/src/app/componentes/pokemon/pokemon.component.html
@@ -15,4 +15,5 @@
   <ng-template #elseDetalle>
     <p>Sin detalle</p>
   </ng-template>
+  <button (click)="emitirId()">Eliminar:</button>
 </article>
